@@ -1,5 +1,6 @@
 0.9.5
 - Add file size, IMA, and sha256 based integrity checking
+- Add ability to send decision results to syslog
 
 0.9.4
 - Fix pattern detection in light of EXEC_PERM events
